Commit 1 of the Advanced form-based search & New API services
